--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -16,26 +16,50 @@
         android:layout_alignParentTop="true"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="23dp"
-        android:text="TextView" />
+        android:text="         " />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/textView1"
-        android:layout_marginTop="28dp"
-        android:text="GET"
-        android:onClick="getRequest" />
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="40dp"
+        android:layout_marginLeft="34dp"
+        android:onClick="postRegisterRequest"
+        android:text="Register Device" />
+
+<!--      <EditText
+        android:id="@+id/usernameText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button3"
+        android:layout_alignLeft="@+id/textView1"
+        android:layout_marginBottom="122dp"
+        android:ems="10" />
+
+    <EditText
+        android:id="@+id/passwordText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button3"
+        android:layout_alignLeft="@+id/usernameText"
+        android:layout_marginBottom="52dp"
+        android:ems="10" >
+
+        <requestFocus />
+    </EditText>
+-->
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/button1"
-        android:layout_toRightOf="@+id/button1"
-        android:text="POST" 
-        android:onClick="postRequest" />
+        android:layout_above="@+id/button3"
+        android:layout_alignLeft="@+id/button3"
+        android:layout_marginBottom="76dp"
+        android:layout_marginLeft="26dp"
+        android:onClick="postCheckInRequest"
+        android:text="Check In" />
 
-    
 </RelativeLayout>
