--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,85 +1,24 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="23dp"
-        android:text="         " />
-
-<!--Text Fields to allow username and password to be user-inputted. Implemented next iteration when phone can handle
-requests asynchronously and when the server can handle new creations 
-     <EditText
-        android:id="@+id/usernameText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button3"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_marginBottom="122dp"
-        android:ems="10" />
-
-    <EditText
-        android:id="@+id/passwordText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button3"
-        android:layout_alignLeft="@+id/usernameText"
-        android:layout_marginBottom="52dp"
-        android:ems="10" >
-
-        <requestFocus />
-    </EditText>
--->
-    
-<!--Hides the AddRegion Button because method not fully functional - awaiting discussion with professor 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/button2"
-        android:layout_centerVertical="true"
-        android:onClick="postRegionRequest"
-        android:text="Add Region" />
- -->
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView1"
-        android:layout_centerHorizontal="true"
-        android:text="Android GeoAuth 1.0"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
-        android:onClick="postRegisterRequest"
-        android:text="Register Device" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="35dp"
-        android:onClick="postCheckInRequest"
-        android:text="Check In" />
-
-</RelativeLayout>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
+    android:orientation="vertical" 
+    android:layout_width="fill_parent" 
+    android:layout_height="fill_parent" 
+    > 
+<Button 
+        android:id="@+id/startBtn" 
+        android:layout_width="match_parent" 
+        android:layout_height="wrap_content" 
+        android:text="Start Service" 
+        /> 
+    <Button 
+        android:id="@+id/stopBtn" 
+        android:layout_width="match_parent" 
+        android:layout_height="wrap_content" 
+        android:text="Stop Service" 
+        /> 
+      	<!-- <Button 
+        android:id="@+id/sendBtn" 
+        android:layout_width="match_parent" 
+        android:layout_height="wrap_content" 
+        android:text="Send Information" 
+        />  -->
+</LinearLayout> 
